--- a/the-original-cover/package.json
+++ b/the-original-cover/package.json
@@ -13,6 +13,7 @@
     "@fontsource/open-sans": "^4.5.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@netlify/plugin-nextjs": "^3.8.0",
     "clipboard": "^2.0.8",
     "next": "11.0.1",
     "react": "17.0.2",
