--- a/the-original-cover/package.json
+++ b/the-original-cover/package.json
@@ -14,7 +14,9 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@netlify/plugin-nextjs": "^3.8.0",
+    "@types/firebase": "^3.2.1",
     "clipboard": "^2.0.8",
+    "firebase": "^9.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
