--- a/the-original-cover/package.json
+++ b/the-original-cover/package.json
@@ -19,7 +19,8 @@
     "firebase": "^9.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ga": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
